--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node  /var/www/html/index.js"
+    "test": "node  ./bin/www"
   },
   "author": "",
   "license": "ISC",
